--- a/final/Makefile
+++ b/final/Makefile
@@ -3,41 +3,44 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ayavorsk <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: kprytkov <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2017/10/24 16:01:22 by ayavorsk          #+#    #+#              #
-#    Updated: 2017/10/24 16:01:22 by ayavorsk         ###   ########.fr        #
+#    Created: 2017/11/22 16:37:50 by kprytkov          #+#    #+#              #
+#    Updated: 2017/11/22 16:37:51 by kprytkov         ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
-NAME = libft.a
 
-SRC = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c\
-ft_isprint.c ft_memccpy.c ft_memchr.c ft_memcmp.c ft_memmove.c ft_memset.c\
-ft_strcat.c ft_strchr.c ft_strcmp.c ft_strcpy.c ft_strdup.c ft_strlcat.c\
-ft_strlen.c ft_strncat.c ft_strncmp.c ft_strncpy.c ft_strnstr.c ft_strrchr.c\
-ft_strstr.c ft_tolower.c ft_toupper.c ft_putstr_fd.c ft_putstr.c ft_putnbr_fd.c\
-ft_putnbr.c ft_putendl_fd.c ft_putendl.c ft_putchar_fd.c ft_putchar.c ft_memcpy.c\
-ft_memalloc.c ft_memdel.c ft_strnew.c ft_strdel.c ft_strclr.c ft_striter.c\
-ft_striteri.c ft_strmap.c ft_strmapi.c ft_strequ.c ft_strnequ.c ft_itoa.c ft_strjoin.c\
-ft_strsplit.c ft_strsub.c ft_strtrim.c ft_wordcount.c ft_strsplit.c ft_substrcmp.c\
+EXECUTABLE = libft.a
 
+SOURCES = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c ft_memcmp.c\
+ft_strlen.c ft_strdup.c ft_strcpy.c ft_strncpy.c ft_strcat.c ft_strncat.c ft_strlcat.c ft_strchr.c\
+ft_strrchr.c ft_strstr.c ft_strnstr.c ft_strcmp.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c\
+ft_isalnum.c ft_isascii.c ft_isprint.c ft_toupper.c ft_tolower.c ft_memalloc.c ft_memdel.c ft_strnew.c\
+ft_strdel.c ft_strclr.c ft_striter.c ft_striteri.c ft_strmap.c ft_strmapi.c ft_strequ.c ft_strnequ.c\
+ft_strsub.c ft_strjoin.c ft_strtrim.c ft_strsplit.c ft_itoa.c ft_putchar.c ft_putstr.c ft_putendl.c\
+ft_putnbr.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_lstnew.c ft_lstdelone.c\
+ft_lstdel.c ft_lstadd.c ft_lstiter.c ft_lstmap.c ft_wordcount.c ft_substrcmp.c\
+
+OBJECTS = *.o
 
 CC = gcc
-FLAGS = -Wall -Werror -Wextra
-OBJ = $(SRC:.c=.o)
-INCLUDE = /libft.h
+WILDCARDS = -Wall -Werror -Wextra
+OBJECTS = $(SOURCES:.c=.o)
+INCLUDES = /libft.h
 
 %.o: %.c
-		$(CC) $(FLAGS) -I $(INCLUDE) -o $@ -c $<
+		$(CC) $(WILDCARDS) -I $(INCLUDES) -o $@ -c $<
 
-all: $(NAME)
+all: $(EXECUTABLE)
 
-$(NAME) : $(OBJ)
-		@ar rc $(NAME) $(OBJ)
-		@ranlib $(NAME)
+$(EXECUTABLE) : $(OBJECTS)
+		@ar rc $(EXECUTABLE) $(OBJECTS)
+		@ranlib $(EXECUTABLE)
 
 clean:
-	/bin/rm -f $(OBJ)
+	/bin/rm -f $(OBJECTS)
+
 fclean: clean
-	/bin/rm -f $(NAME)
+	/bin/rm -f $(EXECUTABLE)
+
 re: fclean all
