--- a/final/Makefile
+++ b/final/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 #******************************************************************************#
 
-EXECUTABLE = libft.a
+NAME = libft.a
 
 SOURCES = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c ft_memcmp.c\
 ft_strlen.c ft_strdup.c ft_strcpy.c ft_strncpy.c ft_strcat.c ft_strncat.c ft_strlcat.c ft_strchr.c\
@@ -31,16 +31,16 @@ INCLUDES = /libft.h
 %.o: %.c
 		$(CC) $(WILDCARDS) -I $(INCLUDES) -o $@ -c $<
 
-all: $(EXECUTABLE)
+all: $(NAME)
 
-$(EXECUTABLE) : $(OBJECTS)
-		@ar rc $(EXECUTABLE) $(OBJECTS)
-		@ranlib $(EXECUTABLE)
+$(NAME) : $(OBJECTS)
+		@ar rc $(NAME) $(OBJECTS)
+		@ranlib $(NAME)
 
 clean:
 	/bin/rm -f $(OBJECTS)
 
 fclean: clean
-	/bin/rm -f $(EXECUTABLE)
+	/bin/rm -f $(NAME)
 
 re: fclean all
